--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
+      "@contexts/*": ["contexts/*"],
       "@features/*": ["features/*"],
       "@hooks/*": ["hooks/*"],
       "@utilities/*": ["utilities/*"]
